<resources>
    <string name="app_name">Savana</string>
    <string name="email">Email</string>
    <string name="welcome">Welcome!</string>
    <string name="password">Password</string>
    <string name="greeting">Welcome back!</string>
    <string name="sing_in">Sing in</string>
    <string name="no_account">I have no account</string>
    <string name="create_an_account">Create an account</string>
    <string name="next_step">Next step</string>
    <string name="enter_name">Enter name</string>
    <string name="select_avatar">Select avatar</string>
    <string name="confirm">Confirm</string>
    <string name="already_have_account">I already have an account</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="select_file">Select File</string>
    <string name="select_music_to_analyze">Select Music to analyze</string>
    <string name="supported_formats">Supported Format: mp3</string>
    <string name="user_note">We can only analyze your files.</string>
    <string name="select_another_file">Select another file</string>
    <string name="cancel">Cancel</string>
    <string name="song_length_restriction">We can analyze only 30s of song</string>
    <string name="diagram_of_your_song">Diagram of your song</string>
    <string name="your_recommendations">Your recommendations:</string>
    <string name="search">Search</string>
    <string name="history_title">History:</string>
    <string name="your_history_empty">Your history is empty</string>
    <string name="welcome_press">Press, press, press, press!</string>
    <string name="name">Nickname</string>
    <string name="enter_nickname">Enter nickname</string>
    <string name="enter_password">Enter password</string>
    <string name="go_back">Go back</string>
    <string name="file_does_not_open">The file cannot be opened</string>
    <string name="unknown_track">Unknown Track</string>
    <string name="audio_file_not_loaded">Audio file is not loaded</string>
    <string name="the_song_too_short_exeption">The song is too short!</string>
    <string name="correct_email_msg">Email is correct</string>
    <string name="password_too_short">Password too short!</string>
    <string name="password_too_long">Password too long!</string>
    <string name="password_must_contest_one_upper_letter">Password must contest one upper letter!</string>
    <string name="password_must_contest_one_lower_letter">Password must contest one lower letter!</string>
    <string name="password_must_contest_one_digit">Password must contest one digit!</string>
    <string name="password_must_contest_one_spec_symbol">Password must contest one spec symbol!</string>
    <string name="nickname_cannot_be_empty">Nickname cannot be empty</string>
    <string name="password_cannot_be_empty">Password cannot be empty</string>
    <string name="email_cannot_be_empty">Email cannot be empty</string>
    <string name="email_is_not_correct">Email is not correct!</string>
    <string name="track_not_selected">Track not selected</string>
    <string name="track_list_empty">Track list is empty :(</string>
    <string name="loading">Loading…</string>
    <string name="the_track_is_being_analyzed">The track is being analyzed</string>
    <string name="unknown_error">Unknown error</string>
    <string name="the_track_isn_t_analyzing_for_some_reason">The track hasn\'t been analysed for some reason :(</string>
    <string name="something_happened">Whoops! Something happened…</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="email_or_password_cannot_be_empty">Email or password cannot be empty</string>
    <string name="unknown">Unknown</string>
</resources>