<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.registration.EmailFragment"
    android:orientation="vertical">


    <com.savana.ui.view.welcome_view.TitleView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:title="@string/app_name"
        app:subtitle="@string/enter_nickname"
        >
    </com.savana.ui.view.welcome_view.TitleView>

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/blocked_item_spacing">
    </Space>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Base.Theme.Savana.TextInputLayout.OutlinedBox"
        android:hint="@string/name"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/inner_text_block_spacing">
    </Space>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/error_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Base.Theme.Savana.Text.Body1"
        android:textColor="@color/colorError"
        android:paddingStart="@dimen/inner_text_block_spacing"
        android:paddingEnd="@dimen/inner_text_block_spacing"
        >
    </com.google.android.material.textview.MaterialTextView>

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/block_spacing">
    </Space>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/confirm_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:text="@string/confirm"
        app:cornerRadius="18dp"
        >
    </com.google.android.material.button.MaterialButton>

</LinearLayout>