<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.main.search.main.SearchMainFragment"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    >

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        >
    </Space>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@drawable/bg_border_cornered"
        android:paddingTop="@dimen/block_spacing"
        android:paddingBottom="@dimen/block_spacing"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        >


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="52dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_file_upload"
            >
        </ImageView>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/blocked_item_spacing">
        </Space>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Base.Theme.Savana.Text.Title"
            android:text="@string/select_music_to_analyze"
            android:textColor="@color/colorOnBackground"
            android:textAlignment="center"
            >
        </com.google.android.material.textview.MaterialTextView>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/inner_text_block_spacing">
        </Space>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Base.Theme.Savana.Text.Body1"
            android:text="@string/supported_formats"
            android:textColor="@color/colorOnBackground"
            >
        </com.google.android.material.textview.MaterialTextView>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/blocked_item_spacing">
        </Space>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/select_file_button"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_height"
            app:icon="@drawable/ic_upload"
            android:text="@string/select_file"
            android:backgroundTint="@color/colorOnBackground"
            >
        </com.google.android.material.button.MaterialButton>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/inner_text_block_spacing">
        </Space>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/error_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:fontFamily="@font/instrument_sans_semibold"
            android:textColor="@color/colorError"
            >
        </com.google.android.material.textview.MaterialTextView>
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        >
    </Space>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Base.Theme.Savana.Text.Body2"
        android:text="@string/user_note"
        android:textAlignment="center"
        >
    </TextView>

</LinearLayout>